--- a/openjdk6/trunk/PKGBUILD
+++ b/openjdk6/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=openjdk6
 pkgver=1.2
-_date=20080801
+_date=20080825
 pkgrel=3
 pkgdesc='Free Java environment based on OpenJDK 6.0 with IcedTea6 replacing binary plugs.'
 url='http://icedtea.classpath.org'
@@ -23,9 +23,17 @@ source=(http://download.java.net/openjdk/jdk6/promoted/${_openjdk_version}/openj
 	fix_corba_cmds_path.diff
 	gcjwebplugin_xulrunner.diff
 	aatext_by_default.diff
-	fontconfig-paths.patch
+	fontconfig-paths.diff
 	openjdk6.profile)
 noextract=(openjdk-6-src-${_openjdk_version}-${_openjdk_date}.tar.gz)
+md5sums=('8e60cdac02ec1b2d8ddb9d7369be69df'
+         'f374729cb5dd59ff3b494441555eb7d6'
+         '5da3e39fa60985576c4f37d1491efbe2'
+         'f7e7a212e50abb56a6ef1a2b1bd27405'
+         'ed2e808df2d2fc2ea7dae5139d475192'
+         'ef60d567c0d9bad111212851220deafd'
+         '104380f0b900c840141e572a7fb70c27'
+         '23583f0bf1418aa59f241b1082a2999e')
 
 build() {
   # for hg checkout install mercurial and
@@ -43,7 +51,7 @@ build() {
     _arch=i586
   fi
   _javaver=1.6.0
-  _jvmdir=/usr/lib/jvm/java-${_javaver}-openjdk
+  _jvmdir=/usr/lib/java-${_javaver}-openjdk
 
   cd ${srcdir}/icedtea6
   ln -s ${srcdir}/openjdk-6-src-${_openjdk_version}-${_openjdk_date}.tar.gz .
@@ -52,8 +60,9 @@ build() {
   patch -Np0 -i ${srcdir}/gcjwebplugin_xulrunner.diff || return 1
 
   cp ${srcdir}/*.diff ${srcdir}/icedtea6/patches/
-  export DISTRIBUTION_PATCHES="patches/fix_jdk_cmds_path.diff patches/fix_corba_cmds_path.diff patches/aatext_by_default.diff patches/fontconfig-paths.patch"
+  export DISTRIBUTION_PATCHES="patches/fix_jdk_cmds_path.diff patches/fix_corba_cmds_path.diff patches/aatext_by_default.diff patches/fontconfig-paths.diff"
 
+  ./autogen.sh
   autoreconf # needed due to mercurial build
 
   export ALT_PARALLEL_COMPILE_JOBS="${MAKEFLAGS/-j}"
