--- a/myodbc/trunk/PKGBUILD
+++ b/myodbc/trunk/PKGBUILD
@@ -1,15 +1,19 @@
 # $Id$
 # Maintainer: Juergen Hoetzel <juergen@archlinux.org>
+
 pkgname=myodbc
-pkgver=3.51.17
-_suffix=r581
+pkgver=3.51.26
+_suffix=r1127
 pkgrel=1
 pkgdesc="ODBC driver/connector for MySQL"
 arch=(i686 x86_64)
 url="http://dev.mysql.com/downloads/connector/odbc/"
 depends=('unixodbc' 'mysql')
-source=(ftp://ftp.orst.edu/pub/mysql/Downloads/MyODBC3/mysql-connector-odbc-${pkgver}${_suffix}.tar.gz)
-md5sums=('7e5f5a3aee52d9f03c29b8ccb1e43015')
+source=("http://mysql.cce.usp.br/Downloads/Connector-ODBC/3.51/mysql-connector-odbc-${pkgver}${_suffix}.tar.gz")
+license=('GPL')
+options=('!libtool')
+
+md5sums=('ad2ac7a7dbef36f0d25bb1cdecc90389')
 
 build() {
   cd $startdir/src/mysql-connector-odbc-${pkgver}${_suffix}
@@ -19,6 +23,4 @@ build() {
     --disable-static
   make || return 1
   make DESTDIR=$startdir/pkg install
-  #libtoolslay
-  find $startdir/pkg -name '*.la' -exec rm {} \;
 }
