--- a/util-linux-ng/repos/testing-i686/PKGBUILD
+++ b/util-linux-ng/repos/testing-i686/PKGBUILD
@@ -6,7 +6,7 @@ pkgrel=1
 pkgdesc="Miscellaneous system utilities for Linux"
 arch=('i686' 'x86_64')
 groups=('base')
-depends=('bash' 'ncurses' 'zlib' 'e2fsprogs')
+depends=('bash' 'ncurses>=5.6-7' 'zlib' 'e2fsprogs')
 replaces=('linux32' 'util-linux')
 conflicts=('linux32' 'util-linux')
 provides=('linux32' 'util-linux')
@@ -15,12 +15,6 @@ source=(ftp://ftp.kernel.org/pub/linux/utils/${pkgname}/v2.14/${pkgname}-${pkgve
 	http://loop-aes.sourceforge.net/updates/util-linux-ng-2.14-20080624.diff.bz2)
 md5sums=('23f227da49df36f33fe47e917e332cd8'
          'e76c888bd140d7bd5bbd5f5b098bc1e7')
-
-# The cryptoloop-support.patch comes from the boys at Rock Linux
-#   (http://www.rocklinux.net/packages/util-linux.html)
-
-# Newer crypt support is here:
-#    http://loop-aes.sourceforge.net/updates/util-linux-${_realver}.diff.bz2
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
