--- a/evms/trunk/PKGBUILD
+++ b/evms/trunk/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Judd Vinet <jvinet@zeroflux.org>
 pkgname=evms
 pkgver=2.5.5
-pkgrel=5
+pkgrel=6
 pkgdesc="Enterprise Volume Management System"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://evms.sourceforge.net/"
-depends=('device-mapper>=1.02.19' 'e2fsprogs' 'perl')
+depends=('device-mapper>=1.02.19' 'e2fsprogs' 'perl' 'ncurses')
 optdepends=('gtk' 'glib')
 makedepends=('gtk')
 backup=('etc/evms.conf')
@@ -24,6 +24,9 @@ source=(http://downloads.sourceforge.net/sourceforge/evms/evms-$pkgver.tar.gz
 	http://evms.sourceforge.net/patches/2.5.5/engine/get_geometry.patch
 	http://evms.sourceforge.net/patches/2.5.5/engine/s390_ioctl_fix.patch
 	http://evms.sourceforge.net/patches/2.5.5/engine/disk_cache.patch
+	http://evms.sourceforge.net/patches/2.5.5/engine/fix-strings.patch
+	http://evms.sourceforge.net/patches/2.5.5/engine/ocfs2_version_check.patch
+	evms-2.5.5-pagesize.patch  #from gentoo bug tracker 169623
 	evms_hook evms_install)
 install=evms.install
 md5sums=('45b463f0cbade194dc0a08be432b572e'
@@ -38,20 +41,27 @@ md5sums=('45b463f0cbade194dc0a08be432b572e'
          '2122d3cb2374153f2569f05d14fdee13'
          'eb9d484e71ada2bbf9a94fa764c670cf'
          'a5e00a9f6f7ea6ec8a776d1cc7cb76bf'
+         'f65874b07c94b5ee54d3269ed40af451'
+         '1edcbf74a9b4d4a01bc9beea2e0c41fb'
+         '43b7b8e3a11ada886a92f0c8f9d18ce4'
          'c97b7918f589ecfe244ed86de5513f0a'
          '4ce62767cc2dc4fbe9f428c36e08cb79')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
+  cd $srcdir/$pkgname-$pkgver
   # adding patches from http://evms.sourceforge.net/patches/2.5.5/engine/
-  PATCHES="md_super_fix.patch raid5_degrade_fix.patch raid5_remove_spare_fix_2.patch raid5_algorithm.patch cli_reload_options.patch cli_query_segfault.patch BaseName.patch get_geometry.patch s390_ioctl_fix.patch disk_cache.patch"
-   for i in $PATCHES; do
-   	patch -Np1 -i $startdir/src/$i || return 1
-   done
-  ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var
+  PATCHES="md_super_fix.patch raid5_degrade_fix.patch raid5_remove_spare_fix_2.patch \
+           raid5_algorithm.patch cli_reload_options.patch cli_query_segfault.patch \
+           BaseName.patch get_geometry.patch s390_ioctl_fix.patch disk_cache.patch \
+           fix-strings.patch ocfs2_version_check.patch"
+  for i in $PATCHES; do
+    patch -Np1 -i $srcdir/$i || return 1
+  done
+  patch -Np1 -i $srcdir/evms-2.5.5-pagesize.patch || return 1
+  ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var --mandir=/usr/share/man
   make || return 1
-  make DESTDIR=$startdir/pkg install
+  make DESTDIR=$pkgdir install
   # add evms hook and install file for initcpio
-  install -D -m 644 $startdir/src/evms_install $startdir/pkg/lib/initcpio/install/evms
-  install -D -m 644 $startdir/src/evms_hook $startdir/pkg/lib/initcpio/hooks/evms
+  install -D -m 644 $srcdir/evms_install $pkgdir/lib/initcpio/install/evms
+  install -D -m 644 $srcdir/evms_hook $pkgdir/lib/initcpio/hooks/evms
 }
