--- a/pekwm/trunk/PKGBUILD
+++ b/pekwm/trunk/PKGBUILD
@@ -3,15 +3,17 @@
 # Contributor: Eddie Lozon <almostlucky@attbi.com>
 
 pkgname=pekwm
-pkgver=0.1.6
+pkgver=0.1.7
 pkgrel=1
 pkgdesc="A small, fast, functional, and flexible window manager"
 arch=(i686 x86_64)
 url="http://pekwm.org/"
-source=(http://pekwm.org/files/$pkgname-$pkgver.tar.bz2 pekwm.desktop)
-depends=('libjpeg' 'libpng' 'libxft' 'libxinerama' 'libxpm' 'libxrandr')
+source=(http://pekwm.org/projects/3/files/$pkgname-$pkgver.tar.bz2
+pekwm.desktop)
+depends=('gcc-libs' 'libjpeg' 'libpng' 'libxft' 'libxinerama' 'libxpm'
+'libxrandr')
 license=(GPL)
-md5sums=('551358cbe15cfe7be3a7f614c49c1d00'
+md5sums=('30acfa41a5005a9f31117041ec32eb0d'
          '5a78fc6653fbb0b7282ecf7f1f81e2c5')
 
 build() {
