--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -21,5 +21,5 @@ build() {
   make DESTDIR=${pkgdir} install || return 1
   install -DTm644 ${srcdir}/${pkgname}-${pkgver}/doc/nanorc.sample ${pkgdir}/etc/nanorc
 
-  rm -rf ${pkgdir}/usr/share/info/dir
+  rm -f ${pkgdir}/usr/share/info/dir
 }
