--- a/xine-lib/trunk/PKGBUILD
+++ b/xine-lib/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=xine-lib
 pkgver=1.1.15
-pkgrel=1
+pkgrel=2
 pkgdesc="A free video player for Unix"
 arch=('i686' 'x86_64')
 url="http://xinehq.de/"
@@ -15,14 +15,14 @@ makedepends=('pkgconfig' 'libtool' 'automake' 'autoconf' 'imagemagick'
              'smbclient' 'mesa' 'alsa-lib' 'vcdimager')
 options=('!libtool')
 source=(http://downloads.sourceforge.net/sourceforge/xine/${pkgname}-${pkgver}.tar.bz2
-        xine-lib-1.1.1-configure-no-mcpu-march.patch)
-md5sums=('42a2b4893b7f892eb334de2fc36d49c8' '9776df4eb54d2f1f68d8268adbc3b5c2')
-sha1sums=('bcb567ea2a11c5f26b2384d5400b8466ea9048c6'
-          '121a8358d7919b2e51067412373f52848290338a')
+        xine-lib-1.1.1-configure-no-mcpu-march.patch xine-header.patch)
+md5sums=('42a2b4893b7f892eb334de2fc36d49c8' '9776df4eb54d2f1f68d8268adbc3b5c2'
+         'b139ee72700f8d118f9051e9140473f5')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   patch -Np0 -i ../xine-lib-1.1.1-configure-no-mcpu-march.patch || return 1
+  patch -p0 -i ../xine-header.patch || return 1
   libtoolize --force --copy || return 1
   aclocal -I m4 || return 1
   autoconf || return 1
