--- a/libopensync/trunk/PKGBUILD
+++ b/libopensync/trunk/PKGBUILD
@@ -3,32 +3,24 @@
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=libopensync
-pkgver=0.22
+pkgver=0.37
 pkgrel=1
 pkgdesc="Library for OpenSync Standardized Synchronization Framework"
 arch=('i686' 'x86_64')
 url="http://www.opensync.org"
 options=('!libtool')
 license="LGPL"
-# needed for >=0.22
-# makedepends=('python' 'cmake')
-makedepends=('swig' 'guile' 'python')
-depends=('glib2' 'libxml2' 'sqlite3')
-source=(http://www.opensync.org/download/releases/0.22/libopensync-$pkgver.tar.bz2)
-force=y
+makedepends=('python' 'cmake')
+depends=('glib2' 'libxslt' 'sqlite3')
+source=(http://www.opensync.org/download/releases/$pkgver/libopensync-$pkgver.tar.bz2)
+md5sums=('5b99caaf15d878719f9135713f63ebc5')
 
 build() {
-  # start building, for >= 0.22!
-  #cd $startdir/src/
-  #mkdir build 
-  #cd build
-  #cmake ../$pkgname-$pkgver -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
+  cd $startdir/src/
+  mkdir build 
+  cd build
+  cmake ../$pkgname-$pkgver -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
 
-  #make VERBOSE=1 || return 1
-  #make DESTDIR=$startdir/pkg install || return 1
-  cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/usr
-  make || return 1
+  make VERBOSE=1 || return 1
   make DESTDIR=$startdir/pkg install || return 1
 }
-md5sums=('f563ce2543312937a9afb4f8445ef932')
