--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=lua 
 pkgver=5.1.4
-pkgrel=1
+pkgrel=2
 pkgdesc="A powerful light-weight programming language designed for extending applications." 
 arch=(i686 x86_64)
 url="http://www.lua.org/" 
@@ -12,8 +12,9 @@ depends=('readline' 'ncurses')
 license=(MIT)
 options=('!makeflags')
 source=($url/ftp/$pkgname-$pkgver.tar.gz $pkgname-arch.patch 'lua-5.1-cflags.diff')
-
-md5sums=('a70a8dfaa150e047866dc01a46272599' '1bd1164a19abf9165e231ba0d8a0bbc7')
+md5sums=('d0870f2de55d59c1c8419f36e8fac150'
+         '1bd1164a19abf9165e231ba0d8a0bbc7'
+         '249582bf1fd861ccf492d2c35a9fe732')
 
 build() { 
   cd $startdir/src/$pkgname-$pkgver 
