--- a/pekwm/trunk/PKGBUILD
+++ b/pekwm/trunk/PKGBUILD
@@ -10,11 +10,10 @@ arch=(i686 x86_64)
 url="http://pekwm.org/"
 source=(http://pekwm.org/projects/3/files/$pkgname-$pkgver.tar.bz2
 pekwm.desktop)
+md5sums=('30acfa41a5005a9f31117041ec32eb0d' '5a78fc6653fbb0b7282ecf7f1f81e2c5')
 depends=('gcc-libs' 'libjpeg' 'libpng' 'libxft' 'libxinerama' 'libxpm'
 'libxrandr')
-license=(GPL)
-md5sums=('30acfa41a5005a9f31117041ec32eb0d'
-         '5a78fc6653fbb0b7282ecf7f1f81e2c5')
+license=('GPL')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
@@ -28,7 +27,7 @@ build() {
 
   /usr/bin/make || return 1
   /usr/bin/make DESTDIR=$startdir/pkg install
-  install -D -m644 $startdir/$pkgname.desktop \
+  install -D -m644 $startdir/src/$pkgname.desktop \
                    $startdir/pkg/etc/X11/sessions/$pkgname.desktop
 }
 # vim: ts=2 sw=2 et ft=sh
