--- a/kdebase-runtime/trunk/PKGBUILD
+++ b/kdebase-runtime/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebase-runtime
-pkgver=4.1.0
-pkgrel=2
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Base Runtime Environment"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -12,8 +12,8 @@ groups=('kde')
 depends=('kdelibs' 'xine-lib' 'hicolor-icon-theme' 'rarian' 'smbclient')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdepimlibs')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('aa320cb5489cc8a3a7f2049bc7bbb8e7')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('f03488d19c3bd95634b797229ac55127')
 
 build() {
 	cd $srcdir
