--- a/kdeedu/trunk/PKGBUILD
+++ b/kdeedu/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdeedu
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE Educational programs"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ groups=('kde')
 depends=('kdebase-workspace' 'boost' 'openbabel' 'indilib' 'libnova' 'libqalculate' 'gsl')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'ocaml' 'facile' 'eigen' 'cfitsio' 'gmm++')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('49c374e8ad6dc00e767a30bb156754a2')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('f819cf9ae9c887f5787b5546de186604')
 
 build() {
 	cd $srcdir
