--- a/kdenetwork/trunk/PKGBUILD
+++ b/kdenetwork/trunk/PKGBUILD
@@ -1,19 +1,19 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdenetwork
-pkgver=4.1.0
-pkgrel=2
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Network related programs"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdebase-workspace' 'kdepimlibs' 'gmp' 'libvncserver' 'openslp' 'libidn' 'libotr' 'decibel' 'qca')
+depends=('kdebase-workspace' 'kdepimlibs' 'libvncserver' 'openslp' 'libidn' 'libotr' 'decibel' 'qca')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('b445bba10dd033c7ffae8bbb9224c6a5')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('e90ef5d3feccb4a2aade798ded81af28')
 
 build() {
 	cd $srcdir
