--- a/kdesdk/trunk/PKGBUILD
+++ b/kdesdk/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdesdk
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE SDK is a collection of applications and tools used by KDE developers"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ groups=('kde')
 depends=('kdebase-workspace' 'kdepimlibs' 'subversion')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('12f04dd718bd15dd62256b46fbaf659a')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('268ea539de7cd5b07dc24d24f593dde1')
 
 build() {
 	cd $srcdir
