--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-system-monitor
-pkgver=2.22.3
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="A system monitor for GNOME"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libgksu>=2.0.5' 'libwnck>=2.22.3' 'gnome-vfs>=2.22.0' 'libgtop>=2.22.3' 'gtkmm>=2.12.7' 'librsvg>=2.22.2')
+depends=('libgksu>=2.0.5' 'libwnck>=2.23.6' 'gconf>=2.23.2' 'libgtop>=2.23.90' 'gtkmm>=2.13.7' 'librsvg>=2.22.2')
 makedepends=('perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2')
 options=(!emptydirs)
 url="http://www.gnome.org"
 groups=('gnome-extra')
 install=gnome-system-monitor.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('06a162294f63cc7c931f78b73d4043b7')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('6f19bc3a4a1a210892bbed9aa1fde676')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
