--- a/intel-dri/trunk/PKGBUILD
+++ b/intel-dri/trunk/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=intel-dri
-pkgver=7.1rc4
+pkgver=7.1
 pkgrel=1
 pkgdesc="Mesa DRI drivers for Intel chipsets"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
-depends=('libdrm>=2.4.0' 'expat>=2.0.1')
+depends=('libdrm>=2.3.1' 'expat>=2.0.1')
 makedepends=('dri2proto>=1.1' 'glproto>=1.4.9' 'pkgconfig' 'libxfixes' 'libxdamage' 'libxxf86vm' 'libxext')
 options=('!libtool')
-source=(http://www.mesa3d.org/beta/MesaLib-7.1-rc4.tar.gz)
-md5sums=('5844564b90fdf0a462c8a4e601fa3f78')
+source=(http://downloads.sourceforge.net/mesa3d/MesaLib-${pkgver}.tar.bz2)
+md5sums=('6bff7f532d16f90f944a400c8bd7074d')
 
 build() {
-  cd ${srcdir}/Mesa-7.1-rc4
+  cd ${srcdir}/Mesa-${pkgver}
   ./configure --prefix=/usr \
     --with-dri-driverdir=/usr/lib/xorg/modules/dri \
     --with-dri-drivers=i810,i915,i965 \
