--- a/libgl/trunk/PKGBUILD
+++ b/libgl/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=libgl
 pkgver=7.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Mesa DRI OpenGL library and drivers"
 arch=(i686 x86_64)
 license=('LGPL')
@@ -12,11 +12,15 @@ depends=('libdrm>=2.3.1' 'libxxf86vm' 'libxdamage' 'expat>=2.0.1')
 makedepends=('dri2proto>=1.1' 'glproto>=1.4.9' 'pkgconfig')
 provides=('libgl-dri')
 replaces=('libgl-dri' 'libgl-mesa')
-source=(http://downloads.sourceforge.net/mesa3d/MesaLib-${pkgver}.tar.bz2)
-md5sums=('6bff7f532d16f90f944a400c8bd7074d')
+options=(!makeflags)
+source=(http://downloads.sourceforge.net/mesa3d/MesaLib-${pkgver}.tar.bz2
+	mesa-7.1-link-shared.patch)
+md5sums=('6bff7f532d16f90f944a400c8bd7074d'
+         'f0baa948d9810f268413111ee439d24b')
 
 build() {
   cd ${startdir}/src/Mesa-${pkgver}
+  patch -Np1 -i ${srcdir}/mesa-7.1-link-shared.patch || return 1
   ./configure --prefix=/usr \
     --with-dri-driverdir=/usr/lib/xorg/modules/dri \
     --with-dri-drivers=swrast \
