--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,23 +2,21 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-video-intel
-pkgver=2.4.1
+pkgver=2.4.2
 pkgrel=1
 pkgdesc="X.org Intel i810/i830/i915 video drivers"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
-depends=('intel-dri>=7.1rc4' 'libpciaccess>=0.10.3' 'libdrm>=2.4.0')
-makedepends=('pkgconfig' 'xorg-server>=1.4.99.906' 'xf86driproto>=2.0.4' 'glproto>=1.4.9' 'mesa>=7.1rc4')
+depends=('intel-dri>=7.1-2' 'libpciaccess>=0.10.3' 'libdrm>=2.3.1')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906-2' 'xf86driproto>=2.0.4' 'glproto>=1.4.9' 'mesa>=7.1')
 conflicts=('xorg-server<1.4.99.906')
 options=('!libtool')
 groups=('xorg-video-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('3c752260ad4db0572a3175d6e8740aa3')
+md5sums=('5cd6b3ed57c7e78ab51e9d9266e73fb6')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  # libdrm 2.4.0 does not contain TTM
-  sed -i -e 's/2.4.0/2.5.0/g' configure || return 1
   ./configure --prefix=/usr \
               --enable-dri || return 1
   make || return 1
