--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -16,10 +16,21 @@ replaces=('mesa-apps')
 source=(http://downloads.sourceforge.net/mesa3d/MesaLib-${pkgver}.tar.bz2
 	http://downloads.sourceforge.net/mesa3d/MesaDemos-${pkgver}.tar.bz2
 	ftp://ftp.archlinux.org/other/mesa/gl-manpages-1.0.1.tar.bz2)
+md5sums=('6bff7f532d16f90f944a400c8bd7074d'
+         'abfc9775e1462363af8ec160d1feb01f'
+         '6ae05158e678f4594343f32c2ca50515')
 
 build() {
   cd ${srcdir}/Mesa-${pkgver}
-  ./configure --prefix=/usr --with-dri-drivers=swrast --enable-glx-tls || return 1
+  export CFLAGS="${CFLAGS} -ffast-math"
+  ./configure --prefix=/usr \
+    --with-dri-driverdir=/usr/lib/xorg/modules/dri \
+    --with-dri-drivers=swrast \
+    --enable-glx-tls \
+    --disable-ttm-api \
+    --with-driver=dri \
+    --enable-xcb \
+    --disable-glut || return 1
   make || return 1
   make DESTDIR=${pkgdir} install || return 1
 
@@ -27,7 +38,7 @@ build() {
   install -m755 progs/xdemos/glx{gears,info} ${pkgdir}/usr/bin/ || return 1
 
   rm -f ${pkgdir}/usr/lib/libGL.so*
-  rm -rf ${pkgdir}/usr/lib/dri
+  rm -rf ${pkgdir}/usr/lib/xorg
 
   cd ${srcdir}/gl-manpages-1.0.1
   ./configure --prefix=/usr || return 1
