--- a/xf86-input-dmc/trunk/PKGBUILD
+++ b/xf86-input-dmc/trunk/PKGBUILD
@@ -2,22 +2,21 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-input-dmc
-pkgver=1.1.1
+pkgver=1.1.2
 pkgrel=1
 pkgdesc="X.Org DMC FIT10 serial input driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.4')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
 options=('!libtool')
 groups=('xorg-input-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('91021ea8f3593221c0d9ee9cc14deb48')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
-md5sums=('f21f008220bc7687ce1c34ab557ec32f')
