--- a/xf86-input-fpit/trunk/PKGBUILD
+++ b/xf86-input-fpit/trunk/PKGBUILD
@@ -2,22 +2,21 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=xf86-input-fpit
-pkgver=1.1.0
-pkgrel=4
+pkgver=1.2.0
+pkgrel=1
 pkgdesc="X.Org Fujitsu Stylistic Tablet PC input driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.1.1')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
 groups=('xorg-input-drivers')
-options=('nolibtool')
+options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('a31066a2076d18619ceaea67f6d89698')
+md5sums=('0f3e013d5ff58e0aba3d9e1d18830291')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
