--- a/xf86-input-microtouch/trunk/PKGBUILD
+++ b/xf86-input-microtouch/trunk/PKGBUILD
@@ -2,22 +2,21 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-input-microtouch
-pkgver=1.1.1
+pkgver=1.2.0
 pkgrel=1
 pkgdesc="X.org microtouch input driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.4')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
 groups=('xorg-input-drivers')
 options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('1ad1aee7d8df84b9ea832d1e75963257')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
-md5sums=('9843fbea6cc0c4129e96ce9a6c893cf6')
